the photo sizes are not consistent; i wasn't able to adjust it, ; I was even oblivious of whether to do so

--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
 </head>
 <body>
     <div class="container">
-        <div class="content" id="Huobi">
+        <div class="content Huobi">
             <img src="CT Analysis_TOP用ロゴ/440px-Huobi-logo.png" alt="Huobi">
         </div>
-        <div class="content" id="Bithumb">
+        <div class="content Bithumb">
             <img src="CT Analysis_TOP用ロゴ/Bithumb_logo.png" alt="Bithumb">
         </div>
-        <div class="content" id="Coinbase">
+        <div class="content Coinbase">
             <img src="CT Analysis_TOP用ロゴ/Coinbase.png" alt="Coinbase">
         </div>
-        <div class="content" id="Cosmos">
+        <div class="content Cosmos">
             <img src="CT Analysis_TOP用ロゴ/cosmos-logo-black.png" alt="Cosmos">
         </div>
-        <div class="content" id="Binance">
+        <div class="content Binance">
             <img src="CT Analysis_TOP用ロゴ/d44818-6-851058-0.png" alt="Binance">
         </div>
-        <div class="content" id="Etherum">
+        <div class="content Etherum">
             <img src="CT Analysis_TOP用ロゴ/ethereum.svg" alt="Etherum">
         </div>
-        <div class="content" id="Kusama">
+        <div class="content Kusama">
             <img src="CT Analysis_TOP用ロゴ/KUSAMA_logo_1.png" alt="Kusama">
         </div>
-        <div class="content" id="Solana">
+        <div class="content Solana">
             <img src="CT Analysis_TOP用ロゴ/OMnvVEz.png" alt="Solana">
         </div>
-        <div class="content" id="SymbolNem">
+        <div class="content SymbolNem">
             <img src="CT Analysis_TOP用ロゴ/Symbol_from_nem.png" alt="Symbol from Nem">
         </div>
-        <div class="content" id="Polkadot">
+        <div class="content Polkadot">
             <img src="CT Analysis_TOP用ロゴ/ダウンロード.png" alt="Polkadot">
         </div>
     </div>
